# apps/api/internal/storage/db.go
@@ -49,6 +49,7 @@ const (
 	TableAssetClasses    = "classes"
 	TableAssetItems      = "items"
 	TableAssetMutations  = "mutations"
+	TableAssetPurchases  = "purchases"
 	TableAssetSnapshot   = "snapshots"
 )
 
